--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,135 @@
-#all1 {
+* {
+    box-sizing: border-box;
+  }
+  
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  [class*="col-"] {
+    float: left;
+    padding: 15px;
+  }
+  
+  html {
+    font-family: "Lucida Sans", sans-serif;
     background-color: burlywood;
-}
-
-#group1 {
+  }
+  
+  .header {
+    background-color:indianred;
+    color:antiquewhite;
+    padding: 15px;
     text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}   
-#group2 {
+  }
+  
+  .menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .menu li {
+    padding: 12px;
+    margin-bottom: 15px;
+    background-color: #d6aa19;
+    color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     text-align: center;
+  }
+  
+  .menu li:hover {
+    background-color: #0099cc;
+  }
+  
+  .aside {
+    background-color: orange;
+    padding: 15px;
+    color: #ffffff;
+    text-align: center;
+    font-size: 14px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  
+  .footer {
+    background-color:darksalmon;
+    color: #ffffff;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
+  }
+  
+  .pong-profile {
+    font-family: Impact, Haettenschweiler, 'Arial Narow Bold', sans-serif;
+    text-align:center;
     border-style: solid;
-    border-color:blueviolet;
-    border-width: 6px;
-    width: 201px;
-    height: 301px;
-    margin: 0 auto;
-}
-#group3 {
+    border-color:red;
+    border-width: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .pong-image {
+    display : flex;
+    align-items: center;
+  }
+  
+  .pong-text {
+    margin-left : 10px;
     text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narow Bold', sans-serif;
-    font-size: medium;
-}
-
-#group4 {
-    text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narow Bold', sans-serif;
-    font-size: medium;
     border-style: solid;
     border-width: 5px  rgb(226, 191, 126);
-    border-color: orangered;
-    width: 300px;
-    height: 200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-#group5 {
+    border-color: #ffffff;
+    padding: 8px; 
+  }
+  
+  .pong-text2 {
     text-align: center;
-    font-family: serif;
-    font-size: large;
-}
-
-#group6 {
+  }
+  
+  .pong-fav {
     text-align: center;
-    font-family: sans-serif;
-    font-size: large;
-}
-
-#video1 {
+    margin-top: 30px;
+  }
+  
+  .pong-video {
     text-align: center;
-}
+  }
+  
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+  
+  @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+  }
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+  }
